--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "cookie-parser": "~1.4.3",
     "d3": "^5.0.0",
     "debug": "~2.6.9",
+    "deep-extend": "^0.5.1",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
+    "hoek": "^5.0.3",
     "jade": "~1.11.0",
     "jsdom": "^11.6.2",
+    "mime": "^1.4.1",
     "moment": "^2.21.0",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "net": "^1.0.2",
     "repl": "^0.1.3",
     "serve-favicon": "~2.4.5",
-    "underscore": "^1.8.3",
-    "hoek": "^5.0.3"
+    "underscore": "^1.8.3"
   }
 }
